# test-pypi

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  publish.yml  release.yml  test.yml
example_pkg/: __init__.py  main.py
