[metadata]
name = example_pkg_3213124219438
version = 0.1.0
author = Alex
author_email = test@example.com
description = A sample package for TestPyPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
